<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/create_account1"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_below="@id/title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:autofillHints="name"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textColorLink="@color/lightblue"
        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/firstNameInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:autofillHints="name"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNameInput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/lastNameInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="240dp"
        android:autofillHints="phone"
        android:background="@drawable/input_bg"

        android:drawableStart="@drawable/baseline_phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/phoneNumberInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_email"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/emailInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="360dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_key"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password2nput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/emailInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="420dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_key"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/create_account2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2nput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/login1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
