<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="2000dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"

android:background="@drawable/background"
    tools:context=".Amboseli">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".Amboseli">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="-1dp"
                android:gravity="center"
                android:text="@string/next_placee"
                android:background="@color/deeppink"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.133" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amboseli_kenya"
                android:textColor="@color/deepblue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.061" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="366dp"
                android:layout_height="405dp"
                android:layout_marginStart="10dp"
                android:text="@string/the_south_rift_part_of_kenya_is_a_little_piece_of_heaven_on_earth_the_famous_maasai_mara_national_reserve_and_amboseli_national_park_are_located_in_this_region_the_mara_is_bursting_with_untouched_wilderness_wildlife_and_native_birds_it_hosts_the_annual_wildebeest_and_zebra_amboseli_offers_a_breathtaking_view_of_the_african_grasslands_and_snow_capped_mt_kilimanjaro_the_highest_mountain_in_africa_the_park_has_a_diverse_terrain_varying_from_swampy_to_ravine_forests_to_the_desert_making_a_beautiful_setting_for_bird_and_wildlife_watchers_both_parks_provide_opportunities_to_discover_the_masai_people_and_their_exceptional_culture"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.171"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.255" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="382dp"
                android:layout_height="550dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.005"
                app:srcCompat="@drawable/amboseli2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="503dp"
                android:contentDescription="@string/to"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.642"
                app:srcCompat="@drawable/amboseli1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.497"
                app:srcCompat="@drawable/amboseli3"
                android:contentDescription="@string/todoo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="164dp"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="159dp"
                android:layout_marginBottom="193dp"
                android:text="@string/diani"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>